feat(dashboard): link code quality card to eslint config

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -251,6 +251,17 @@
                   </div>
                 </eb-stack>
               </div>
+              <footer card-footer>
+                <eb-button
+                  variant="secondary"
+                  size="sm"
+                  [fullWidth]="true"
+                  (click)="openEslintConfig()"
+                  [ariaLabel]="t('home.linting.viewConfig')"
+                >
+                  {{ t('home.linting.viewConfig') }}
+                </eb-button>
+              </footer>
             </eb-card>
           }
         }
