feat(dashboard): add directives to documentation card

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -407,6 +407,14 @@
                       }}</span
                     >
                   </div>
+                  <div class="metric__row">
+                    <span class="metric__label">{{ t('home.documentation.directives') }}</span>
+                    <span class="metric__value"
+                      >{{ ext.documentation.directives?.documented }}/{{
+                        ext.documentation.directives?.total
+                      }}</span
+                    >
+                  </div>
                 </eb-stack>
               </div>
               <footer card-footer>
