feat(dashboard): generalize directives to utils metric

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -408,10 +408,10 @@
                     >
                   </div>
                   <div class="metric__row">
-                    <span class="metric__label">{{ t('home.documentation.directives') }}</span>
+                    <span class="metric__label">{{ t('home.documentation.utils') }}</span>
                     <span class="metric__value"
-                      >{{ ext.documentation.directives?.documented }}/{{
-                        ext.documentation.directives?.total
+                      >{{ ext.documentation.utils?.documented }}/{{
+                        ext.documentation.utils?.total
                       }}</span
                     >
                   </div>
