fix(dashboard): change branches to merged prs

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -509,8 +509,8 @@
                     <span class="metric__value">{{ ext.git.contributors }}</span>
                   </div>
                   <div class="metric__row">
-                    <span class="metric__label">{{ t('home.git.branches') }}</span>
-                    <span class="metric__value">{{ ext.git.branches }}</span>
+                    <span class="metric__label">{{ t('home.git.prs') }}</span>
+                    <span class="metric__value">{{ ext.git.prs }}</span>
                   </div>
                 </eb-stack>
               </div>
